[tool.poetry]
name = "dnsblock"
version = "0.1.0"
description = ""
authors = ["Steven Wills <steven@wills.me>"]
readme = "README.rst"
license = "MIT"
repository = "https://github.com/swills1/dnsblock.git"
keywords = ["dns", "blocklist", "recursive", "automation"]

[tool.poetry.urls]
"Bug Tracker" = "https://https://github.com/swills1/dnsblock/issues"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
click = "^8.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
